--- a/backend/app/views/index.ejs
+++ b/backend/app/views/index.ejs
@@ -16,6 +16,19 @@
             <%- include('indexform'); %>
 
             <br>
+
+            <center>
+                <select id="filter" class="form-select mb-3 w-25">
+                    <option value="all" selected>Todos</option>
+                    <option value="⚕️">⚕️ Salud</option>
+                    <option value="💻">💻 Programación</option>
+                    <option value="⚒️">⚒️ Daily grind</option>
+                    <option value="🤔">🤔 Por definir</option>
+                    <option value="💪">💪 Superación</option>
+                    <option value="📖">📖 Universidad</option>
+                    <option value="⬜">⬜ N/A</option>
+                </select>
+            </center>
     
             <section id="actividadesDivs">
             </section>
