Filtro de registros en sección Admin.

--- a/backend/app/views/admin.ejs
+++ b/backend/app/views/admin.ejs
@@ -10,9 +10,16 @@
         <section id="contentSection">
 
             <center>
-                <h5 class="m-3">
-                    Admin.
-                </h5>
+                <select id="filter" class="form-select mb-3 w-25">
+                    <option value="all" selected>Todos</option>
+                    <option value="⚕️">⚕️ Salud</option>
+                    <option value="💻">💻 Programación</option>
+                    <option value="⚒️">⚒️ Daily grind</option>
+                    <option value="🤔">🤔 Por definir</option>
+                    <option value="💪">💪 Superación</option>
+                    <option value="📖">📖 Universidad</option>
+                    <option value="⬜">⬜ N/A</option>
+                </select>
             </center>
 
             <table class="table table-hover">
