Filter small changes in options.

--- a/backend/app/views/index.ejs
+++ b/backend/app/views/index.ejs
@@ -20,11 +20,12 @@
             <center>
                 <select id="filter" class="form-select mb-3 w-25">
                     <option value="all" selected>Todos</option>
-                    <option value="⚕️">⚕️ Salud</option>
-                    <option value="💻">💻 Programación</option>
                     <option value="⚒️">⚒️ Daily grind</option>
-                    <option value="🤔">🤔 Por definir</option>
-                    <option value="💪">💪 Superación</option>
+                    <option value="💪">💪 Fuerza</option>
+                    <option value="💻">💻 Programación</option>
+                    <option value="🈺">🈺 Proyecto A</option>
+                    <option value="🅱️">🅱️ Proyecto B</option>
+                    <option value="⚕️">⚕️ Salud</option>
                     <option value="📖">📖 Universidad</option>
                     <option value="⬜">⬜ N/A</option>
                 </select>
