--- a/frontend/src/components/sections/hoy/Activity.css
+++ b/frontend/src/components/sections/hoy/Activity.css
@@ -3,10 +3,8 @@
 .actividad,
 .nota {
     display: flex;
-    border-radius: 8px;
-    margin-left: 30px;
-    margin-right: 30px;
-    padding: 15px;
+    border-radius: 1rem;
+    padding: 1.6rem;
     border: 2px solid #cccccc;
     box-shadow: 2px 2px 2px #646464;
 }
@@ -40,8 +38,8 @@ img {
 }
 
 input[type='checkbox'].hecho-checkbox {
-    height: 50px;
-    width: 50px;
-    margin: 2px;
+    height: 3rem;
+    width: 3rem;
+    margin: 0.5rem;
     accent-color: rgb(99, 93, 131);
 }
